--- a/less/foundationstrap.less
+++ b/less/foundationstrap.less
@@ -55,6 +55,7 @@ Bootstrap customization best practices: http://stackoverflow.com/questions/10451
 @import "navbar";
 @import "../bootstrap/less/breadcrumbs";
 @import "../bootstrap/less/pagination";
+@import "pagination";
 @import "../bootstrap/less/pager";
 
 // Components: Popovers
@@ -69,6 +70,7 @@ Bootstrap customization best practices: http://stackoverflow.com/questions/10451
 @import "../bootstrap/less/labels-badges";
 @import "labels";
 @import "../bootstrap/less/progress-bars";
+@import "progress-bars";
 @import "../bootstrap/less/accordion";
 @import "../bootstrap/less/carousel";
 @import "carousel";
