--- a/less/buttons.less
+++ b/less/buttons.less
@@ -2,6 +2,23 @@
 //
 
 .btn,
+.btn-large,
+.btn-small,
+.btn-mini,
+.btn-group > .btn:first-child,
+.btn-group > .btn:last-child,
+.btn-group > .dropdown-toggle,
+.btn-group > .btn.large:first-child,
+.btn-group > .btn.large:last-child,
+.btn-group > .large.dropdown-toggle,
+.btn-group-vertical .btn:first-child,
+.btn-group-vertical .btn:last-child,
+.btn-group-vertical .btn-large:first-child,
+.btn-group-vertical .btn-large:last-child {
+	.border-radius(0);
+}
+
+.btn,
 .btn-group.open .dropdown-toggle,
 .btn-group > .btn + .dropdown-toggle,
 .btn-group.open .btn.dropdown-toggle {
