--- a/less/foundationstrap.less
+++ b/less/foundationstrap.less
@@ -29,12 +29,16 @@
 @import "../bootstrap/less/type";
 @import "type";
 @import "../bootstrap/less/code";
+@import "code";
 @import "../bootstrap/less/forms";
+@import "forms";
 @import "../bootstrap/less/tables";
+@import "tables";
 
 // Components: common
 @import "../bootstrap/less/sprites";
 @import "../bootstrap/less/dropdowns";
+@import "dropdowns";
 @import "../bootstrap/less/wells";
 @import "wells";
 @import "../bootstrap/less/component-animations";
@@ -53,15 +57,19 @@
 @import "../bootstrap/less/navbar";
 @import "navbar";
 @import "../bootstrap/less/breadcrumbs";
+@import "breadcrumbs";
 @import "../bootstrap/less/pagination";
 @import "pagination";
 @import "../bootstrap/less/pager";
+@import "pager";
 
 // Components: Popovers
 @import "../bootstrap/less/modals";
 @import "modals";
 @import "../bootstrap/less/tooltip";
+@import "tooltip";
 @import "../bootstrap/less/popovers";
+@import "popovers";
 
 // Components: Misc
 @import "../bootstrap/less/thumbnails";
@@ -71,9 +79,11 @@
 @import "../bootstrap/less/progress-bars";
 @import "progress-bars";
 @import "../bootstrap/less/accordion";
+@import "accordion";
 @import "../bootstrap/less/carousel";
 @import "carousel";
 @import "../bootstrap/less/hero-unit";
+@import "hero-unit";
 
 // UTILITY CLASSES
 // ------------------
@@ -108,5 +118,3 @@
 
 // RESET (UN-FLUFFIFY BOOTSTRAP)
 // ------------------
-
-@import "reset";
