--- a/less/navbar.less
+++ b/less/navbar.less
@@ -1,7 +1,15 @@
-
 //
 // Navbars (Redux)
 // --------------------------------------------------
+
+
+.nav-collapse .nav > li > a,
+.nav-collapse .dropdown-menu a,
+.nav-collapse .btn,
+.nav-collapse .dropdown-menu {
+	.border-radius(0);
+}
+
 .navbar-inner {
 	background-image: none;
 	filter: 0;
