--- a/less/reset.less
+++ b/less/reset.less
@@ -1,161 +1,5 @@
-// reset radius
+// reset lists
 
-code, pre,
-.label, .badge,
-
-.table-bordered,
-.table-bordered thead:first-child tr:first-child th:first-child,
-.table-bordered tbody:first-child tr:first-child td:first-child,
-.table-bordered thead:first-child tr:first-child th:last-child,
-.table-bordered tbody:first-child tr:first-child td:last-child,
-.table-bordered thead:last-child tr:last-child th:first-child,
-.table-bordered tbody:last-child tr:last-child td:first-child,
-.table-bordered tfoot:last-child tr:last-child td:first-child,
-.table-bordered thead:last-child tr:last-child th:last-child,
-.table-bordered tbody:last-child tr:last-child td:last-child,
-.table-bordered tfoot:last-child tr:last-child td:last-child,
-.table-bordered caption + thead tr:first-child th:first-child,
-.table-bordered caption + tbody tr:first-child td:first-child,
-.table-bordered colgroup + thead tr:first-child th:first-child,
-.table-bordered colgroup + tbody tr:first-child td:first-child,
-.table-bordered caption + thead tr:first-child th:last-child,
-.table-bordered caption + tbody tr:first-child td:last-child,
-.table-bordered colgroup + thead tr:first-child th:last-child,
-.table-bordered colgroup + tbody tr:first-child td:last-child,
-
-select,
-textarea,
-input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="url"],
-input[type="search"],
-input[type="tel"],
-input[type="color"],
-.uneditable-input,
-
-.input-append input,
-.input-prepend input,
-.input-append select,
-.input-prepend select,
-.input-append .uneditable-input,
-.input-prepend .uneditable-input,
-.input-prepend .add-on:first-child,
-.input-prepend .btn:first-child,
-.input-append input,
-.input-append select,
-.input-append .uneditable-input,
-.input-append input + .btn-group .btn,
-.input-append select + .btn-group .btn,
-.input-append .uneditable-input + .btn-group .btn,
-.input-append .add-on:last-child,
-.input-append .btn:last-child,
-.input-prepend.input-append input + .btn-group .btn,
-.input-prepend.input-append select + .btn-group .btn,
-.input-prepend.input-append .uneditable-input + .btn-group .btn,
-.input-prepend.input-append .add-on:first-child,
-.input-prepend.input-append .btn:first-child,
-.input-prepend.input-append .add-on:last-child,
-.input-prepend.input-append .btn:last-child,
-
-input.search-query,
-.form-search .input-append .search-query,
-.form-search .input-append .btn,
-.form-search .input-prepend .search-query,
-.form-search .input-prepend .btn,
-
-.btn,
-.btn-large,
-.btn-small,
-.btn-mini,
-.btn-group > .btn:first-child,
-.btn-group > .btn:last-child,
-.btn-group > .dropdown-toggle,
-.btn-group > .btn.large:first-child,
-.btn-group > .btn.large:last-child,
-.btn-group > .large.dropdown-toggle,
-.btn-group-vertical .btn:first-child,
-.btn-group-vertical .btn:last-child,
-.btn-group-vertical .btn-large:first-child,
-.btn-group-vertical .btn-large:last-child,
-
-.nav-tabs > li > a,
-.nav-pills > li > a,
-.nav-tabs.nav-stacked > li:first-child > a,
-.nav-tabs.nav-stacked > li:last-child > a,
-.nav-tabs.nav-stacked > li > a:hover,
-.nav-tabs .dropdown-menu,
-.nav-pills .dropdown-menu,
-
-.tabs-below > .nav-tabs > li > a,
-.tabs-left > .nav-tabs > li > a,
-.tabs-right > .nav-tabs > li > a,
-
-.navbar-inner,
-.navbar-search .search-query,
-.navbar .btn-navbar .icon-bar,
-.navbar .pull-right > li > .dropdown-menu .dropdown-menu,
-.navbar .nav > li > .dropdown-menu.pull-right .dropdown-menu,
-
-.breadcrumb,
-
-.pagination ul,
-.pagination ul > li:first-child > a,
-.pagination ul > li:first-child > span,
-.pagination ul > li:last-child > a,
-.pagination ul > li:last-child > span,
-.pagination-large ul > li:first-child > a,
-.pagination-large ul > li:first-child > span,
-.pagination-large ul > li:last-child > a,
-.pagination-large ul > li:last-child > span,
-.pagination-mini ul > li:first-child > a,
-.pagination-small ul > li:first-child > a,
-.pagination-mini ul > li:first-child > span,
-.pagination-small ul > li:first-child > span,
-.pagination-mini ul > li:last-child > a,
-.pagination-small ul > li:last-child > a,
-.pagination-mini ul > li:last-child > span,
-.pagination-small ul > li:last-child > span,
-
-.pager li > a,
-.pager li > span,
-
-.alert,
-.progress,
-.hero-unit,
-.tooltip-inner,
-.popover,
-.popover-title,
-.modal,
-.modal-footer,
-
-.dropdown-menu,
-.dropdown-submenu > .dropdown-menu,
-.dropup .dropdown-submenu > .dropdown-menu,
-.dropdown-submenu.pull-left > .dropdown-menu,
-
-.typeahead,
-.accordion-group,
-.carousel-control,
-
-.well,
-.well-large,
-.well-small,
-
-.nav-collapse .nav > li > a,
-.nav-collapse .dropdown-menu a,
-.nav-collapse .btn,
-.nav-collapse .dropdown-menu,
-
-.border-radius-off {
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
+ul, ol {
+	margin: 0; // default margin does nothing but piss me off
 }
