--- a/less/type.less
+++ b/less/type.less
@@ -1,8 +1,8 @@
-
-/* Headers/Titles */
-/*-----------------------------------------------------------------------------------*/
+//
+// Headers/Titles
+// --------------------------------------------------
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Segoe UI', 'Ubuntu', sans-serif;
-    font-weight: 300;
+	font-family: 'Segoe UI', 'Ubuntu', sans-serif;
+	font-weight: 300;
 }
