--- a/less/navs.less
+++ b/less/navs.less
@@ -2,6 +2,26 @@
 // Navs
 // --------------------------------------------------
 
+.nav-tabs > li > a,
+.nav-pills > li > a,
+.nav-tabs.nav-stacked > li:first-child > a,
+.nav-tabs.nav-stacked > li:last-child > a,
+.nav-tabs.nav-stacked > li > a:hover,
+.nav-tabs .dropdown-menu,
+.nav-pills .dropdown-menu,
+
+.tabs-below > .nav-tabs > li > a,
+.tabs-left > .nav-tabs > li > a,
+.tabs-right > .nav-tabs > li > a,
+
+.navbar-inner,
+.navbar-search .search-query,
+.navbar .btn-navbar .icon-bar,
+.navbar .pull-right > li > .dropdown-menu .dropdown-menu,
+.navbar .nav > li > .dropdown-menu.pull-right .dropdown-menu {
+	.border-radius(0);
+}
+
 .nav-header {
 	font-size: 14px;
 	font-weight: 300;
