--- a/less/foundationstrap.less
+++ b/less/foundationstrap.less
@@ -84,6 +84,7 @@
 @import "carousel";
 @import "../bootstrap/less/hero-unit";
 @import "hero-unit";
+@import "lists";
 
 // UTILITY CLASSES
 // ------------------
@@ -118,3 +119,4 @@
 
 // RESET (UN-FLUFFIFY BOOTSTRAP)
 // ------------------
+@import "reset";
