--- a/less/labels.less
+++ b/less/labels.less
@@ -5,37 +5,6 @@
 	.border-radius(0);
 }
 
-@ringBadgeBorder: 2px;
-@ringBadgeSize: 40px;
-@ringBadgeIconSize: 32px;
-
-.ring-badge {
-	padding: 0;
-	display: inline-block;
-	.border-radius(999px);
-	width: @ringBadgeSize;
-	height: @ringBadgeSize;
-	line-height: @ringBadgeSize;
-	text-align: center;
-	vertical-align: middle;
-	position: relative;
-	border: @ringBadgeBorder solid @grayDark;
-	color: @grayDark;
-	font-size: 20px;
-	font-weight: bold;
-	i { 
-		font-size: @ringBadgeIconSize; 
-		position: absolute;
-		width: @ringBadgeSize;
-		left: 0;  
-		top: @ringBadgeBorder;
-		line-height: @ringBadgeSize;
-
-		// Some icons dont align centered, so use offset
-		&.offset { width: @ringBadgeIconSize; }
-	}
-}
-
 // Colors
 // Only give color difference to links (and to simplify, we don't qualifty with `a` but [href] attribute)
 .label,
@@ -107,10 +76,6 @@
 	}
 }
 
-.ring-badge {
-	.badge;
-}
-
 .label-medium {
 	padding: 6px 13px;
 }
@@ -123,4 +88,57 @@
 
 .label-round {
 	.border-radius(1000px);
+}
+
+// Ring badges
+
+@ringBadgeBorder: 2px;
+@ringBadgeSize: 40px;
+@ringBadgeIconSize: 32px;
+
+.ring-badge {
+	padding: 0;
+	display: inline-block;
+	.border-radius(999px);
+	width: @ringBadgeSize;
+	height: @ringBadgeSize;
+	line-height: @ringBadgeSize;
+	text-align: center;
+	vertical-align: middle;
+	position: relative;
+	border: @ringBadgeBorder solid @grayDark;
+	color: @grayDark;
+	font-size: 20px;
+	font-weight: bold;
+	i {		
+		font-size: @ringBadgeIconSize;
+		position: absolute;
+		width: @ringBadgeSize;
+		left: 0;
+		top: @ringBadgeBorder;
+		line-height: @ringBadgeSize;
+
+		// Some icons dont align centered, so use offset
+		&.offset { width: @ringBadgeIconSize; }
+	}
+}
+
+// Colors
+// Only give color difference to links (and to simplify, we don't qualifty with `a` but [href] attribute)
+.ring-badge {
+	// Important (red)
+	&-important { color: @errorBackground; border-color: @errorBackground; }
+	&-important[href] { color: darken(@errorBackground, 10%); border-color: darken(@errorBackground, 10%); }
+	// Warnings (orange)
+	&-warning { color: @orange; border-color: @orange; }
+	&-warning[href] { color: darken(@orange, 10%); border-color: darken(@orange, 10%); }
+	// Success (green)
+	&-success { color: @successBackground; border-color: @successBackground; }
+	&-success[href] { color: darken(@successBackground, 10%); border-color: darken(@successBackground, 10%); }
+	// Info (turquoise)
+	&-info { color: @infoBackground; border-color: @infoBackground; }
+	&-info[href] { color: darken(@infoBackground, 10%); border-color: darken(@infoBackground, 10%); }
+	// Inverse (black)
+	&-inverse { color: @grayDark; border-color: @grayDark; }
+	&-inverse[href] { color: darken(@grayDark, 10%); border-color: darken(@grayDark, 10%); }
 }
