Minor fix to badge-rings to support fontawesome 3

--- a/less/labels.less
+++ b/less/labels.less
@@ -94,7 +94,7 @@
 
 @ringBadgeBorder: 2px;
 @ringBadgeSize: 40px;
-@ringBadgeIconSize: 32px;
+@ringBadgeIconSize: 30px;
 
 .ring-badge {
 	padding: 0;
@@ -115,7 +115,7 @@
 		position: absolute;
 		width: @ringBadgeSize;
 		left: 0;
-		top: @ringBadgeBorder;
+		top: -1px;
 		line-height: @ringBadgeSize;
 
 		// Some icons dont align centered, so use offset
